--- a/src/styles/estilo.css
+++ b/src/styles/estilo.css
@@ -77,6 +77,7 @@ h1 {
 }
 
 @media (max-width: 768px) {
+
   .nav {
     display: none;
     flex-direction: column;
@@ -90,6 +91,10 @@ h1 {
     width: 200px;
   }
 
+  .logo a {
+    display: none;
+  }
+
   .nav a {
     margin: 10px 0;
     color: #333;
@@ -97,8 +102,16 @@ h1 {
   }
 
   .menu {
-    display: block;
+    position: relative;
+    display:  block;
     color: #333;
+  }
+  .menu a {
+    text-decoration: none;
+    color: #333;
+    font-size: 32px;
+    font-weight: 700;
+    margin-left: 4rem;
   }
 
   .nav.show {
