--- a/src/styles/estilo.css
+++ b/src/styles/estilo.css
@@ -207,56 +207,9 @@ h1 {
   color: #555;
 }
 
-/* Coleções */
-.colecoes {
-  background-color: #f4f4f4;
-  padding: 80px 20px;
-  text-align: center;
-}
 
-.container-colecoes {
-  display: grid;
-  justify-items: center;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 40px;
-  padding: 60px 20px;
-  max-width: 1200px;
-  margin: 0 auto;
-}
-
-.box-colection {
-  text-align: center;
-  border-radius: 10px;
-  overflow: hidden;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s ease;
-}
-
-.box-colection:hover {
-  transform: translateY(-10px);
-}
-
-.JoiaImg {
-  width: 100%;
-  height: 250px;
-  object-fit: cover;
-  min-width: 200px;  
-  max-height: 250px; 
-}
 
 @media (max-width: 768px) {
-  .container-colecoes {
-    grid-template-columns: repeat(2, 1fr); 
-  }
-
-  .box-colection {
-    width: 90%;  
-  }
-
-  .JoiaImg {
-    height: 200px;  
-    min-width: 150px; 
-  }
 
   h2 {
     font-size: 20px;
@@ -272,18 +225,8 @@ h1 {
 }
 
 @media (max-width: 480px) {
-  .container-colecoes {
-    grid-template-columns: 1fr; 
-  }
 
-  .box-colection {
-    width: 100%; 
-  }
 
-  .JoiaImg {
-    height: 180px;  
-    min-width: 120px;  
-  }
 
   h2 {
     font-size: 18px;
@@ -417,7 +360,7 @@ h1 {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 20px;
-  max-width: 1200px;
+  max-width: 1000px;
   margin: 0 auto;
 }
 
@@ -476,10 +419,36 @@ h1 {
 /* Footer */
 .footer {
   align-content: center;
-  justify-items: center;
   background-color: #333;
   color: white;
-  height: 5rem;
+  
+  
+}
+.grid-footer{
+  padding: 0 60px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.social{
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+}
+.social .logo{
+  max-width: 5rem;
+}
+
+.container-footer{
+  text-align: center;
+  align-content: center;
+  justify-items: center;
+}
+
+.social .icon{
+  margin: 1rem;
+  max-width: 40px;
 }
 
 
@@ -528,6 +497,14 @@ h1 {
   .item{
     width: 85%;
   }
+  .grid-footer{
+    padding: 0 60px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
 }
 
 /* Modal */
@@ -573,7 +550,31 @@ h1 {
   color: #555;
 }
 
-.modal .price {
+.carrinho{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 1rem;
+  width: 100%;
+}
+
+.carrinho p{
+  font-size: 1.2rem;
+  font-weight: bold;
+  transition: ease-in 0.1s;
+}
+
+.carrinho img{
+  max-width: 30px;
+}
+
+.carrinho p:hover {
+  color: green;
+}
+
+
+
+.preco {
   font-size: 1.2rem;
   font-weight: bold;
   color: #d43f57;
