--- a/src/styles/estilo.css
+++ b/src/styles/estilo.css
@@ -1,4 +1,3 @@
-/* Reset e Configurações Gerais */
 * {
   margin: 0;
   padding: 0;
@@ -26,7 +25,6 @@ h1 {
 .header {
   background-color: #fff;
   border-bottom: 1px solid #ddd;
-  padding: 15px 0;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   position: fixed;
   top: 0;
@@ -41,14 +39,10 @@ h1 {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 20px;
 }
 
-.logo a {
-  font-size: 32px;
-  font-weight: 700;
-  color: #333;
-  text-decoration: none;
+.logo img {
+  max-width: 90px;
 }
 
 .nav {
@@ -68,6 +62,11 @@ h1 {
 .nav a:hover {
   color: #b8860b;
 }
+
+.menu-container{
+display: none;
+}
+
 
 
 .menu {
@@ -101,17 +100,23 @@ h1 {
     font-size: 18px;
   }
 
+  .menu-container{
+    display: flex;
+    flex-direction: row;
+    justify-items: center;
+    justify-content: space-between;
+  }
+
+  .menu-container img {
+    max-width: 70px;
+  }
+
   .menu {
+    margin-left: 12rem;
+    margin-top: 0.75rem;
     position: relative;
     display:  block;
     color: #333;
-  }
-  .menu a {
-    text-decoration: none;
-    color: #333;
-    font-size: 32px;
-    font-weight: 700;
-    margin-left: 4rem;
   }
 
   .nav.show {
